# multimedia_media_lite

./: OAT.xml  README.md  README_zh.md  bundle.json  config.gni  readme.md
frameworks/player_lite/: BUILD.gn  player.cpp  player_impl.cpp  player_impl.h
frameworks/player_lite/binder/: player.cpp  player_client.cpp  player_client.h  player_impl.cpp  player_type.h
frameworks/player_lite/binder/player_control/include/: hi_demuxer.h
frameworks/player_lite/binder/player_control/player/: liteplayer.cpp  liteplayer.h  liteplayer_msgtype.h  liteplayer_state_machine.cpp  liteplayer_state_machine.h
frameworks/player_lite/binder/player_control/sink/: player_audio_sink.cpp  player_audio_sink.h  player_sink_manager.h  player_video_sink.h
frameworks/player_lite/binder/player_control/source/: player_demux.cpp
frameworks/player_lite/buffersource/include/: buffer_source.h
frameworks/player_lite/passthrough/: player.cpp
frameworks/player_lite/player_control/decoder/: decoder.cpp  decoder.h
frameworks/player_lite/player_control/include/: hi_liteplayer.h  player_define.h
frameworks/player_lite/player_control/player/: liteplayer.cpp  liteplayer.h  liteplayer_comm.cpp  liteplayer_msgtype.h  liteplayer_state_machine.cpp  liteplayer_state_machine.h
frameworks/player_lite/player_control/player/fsm/include/: hi_fsm.h
frameworks/player_lite/player_control/player/fsm/src/: fsm_common.cpp  hi_state.h  message_handler.h  message_looper.cpp  message_looper.h  mmessage_pool.h
frameworks/player_lite/player_control/sink/: player_audio_sink.cpp  player_audio_sink.h  player_sink_manager.cpp  player_sink_manager.h  player_sync.cpp  player_sync.h  player_video_sink.cpp  player_video_sink.h
frameworks/player_lite/player_control/source/: player_demux.cpp
frameworks/recorder_lite/: BUILD.gn  recorder.cpp  recorder_client.cpp  recorder_client.h  recorder_impl.cpp  recorder_impl.h
frameworks/recorder_lite/binder/: recorder_client.cpp  recorder_client.h
frameworks/recorder_lite/recorder_sink/include/: recorder_sink.h
frameworks/recorder_lite/recorder_sink/src/: recorder_sink.cpp
frameworks/recorder_lite/recorder_source/include/: recorder_audio_source.h  recorder_source.h  recorder_video_source.h
frameworks/recorder_lite/recorder_source/src/: recorder_audio_source.cpp  recorder_video_source.cpp
interfaces/innerkits/: player_interface.h
interfaces/kits/player_lite/: player.h
interfaces/kits/player_lite/js/builtin/: BUILD.gn
interfaces/kits/player_lite/js/builtin/src/: audio_module.cpp  audio_player.cpp
interfaces/kits/recorder_lite/: recorder.h
player_control/player/: liteplayer.cpp
player_control/player/fsm/src/: hi_fsm.cpp
services/: BUILD.gn  bundle.json  cameradev_imx307.ini  cameradev_imx335.ini  cameradev_jxf23.ini  media_main.cpp
services/player_lite/: BUILD.gn
services/player_lite/client/include/: player_client.h  player_type.h
services/player_lite/client/src/: player_client.cpp
services/player_lite/factory/include/: player_factory.h
services/player_lite/factory/src/: player_factory.cpp
services/player_lite/impl/: player_impl.cpp
services/player_lite/impl/buffersource/include/: buffer_source.h
services/player_lite/impl/buffersource/src/: buffer_source.cpp
services/player_lite/impl/player_control/decoder/: decoder.cpp  decoder.h
services/player_lite/impl/player_control/include/: hi_demuxer.h  hi_error_def.h  hi_liteplayer.h  hi_liteplayer_err.h  player_define.h
services/player_lite/impl/player_control/player/: liteplayer.cpp  liteplayer_comm.cpp
services/player_lite/impl/player_control/player/fsm/src/: hi_state_machine.cpp  message_looper.cpp  mmessage_pool.cpp
services/player_lite/impl/player_control/sink/: player_audio_sink.cpp  player_audio_sink.h  player_sink_manager.cpp  player_sink_manager.h  player_sync.cpp  player_video_sink.cpp  player_video_sink.h
services/player_lite/server/include/: player_factory.h  player_server.h
services/player_lite/server/src/: player_factory.cpp  player_server.cpp  samgr_player_server.cpp
services/recorder_lite/: BUILD.gn  recorder_audio_source.cpp  recorder_audio_source.h  recorder_common.h  recorder_data_source.h  recorder_impl.cpp  recorder_impl.h  recorder_samgr.cpp  recorder_service.cpp  recorder_service.h  recorder_sink.cpp  recorder_sink.h  recorder_source.h  recorder_video_source.cpp  recorder_video_source.h
services/recorder_lite/impl/include/: recorder_impl.h
services/recorder_lite/impl/src/: recorder_audio_source.cpp  recorder_impl.cpp  recorder_sink.cpp  recorder_video_source.cpp
services/recorder_lite/server/include/: recorder_service.h
services/recorder_lite/server/src/: recorder_samgr.cpp  recorder_service.cpp
test/: BUILD.gn  test_play_file_h265.cpp  test_play_file_h265.h
test/unittest/: BUILD.gn
test/unittest/player_lite/: player_lite_test.cpp
test/unittest/recorder_lite/: recorder_lite_test.cpp  recorder_lite_test.h
