# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")

executable("test_play_file_h265") {
  sources = [ "test_play_file_h265.cpp" ]
  cflags = [ "-Wall" ]
  cflags_cc = cflags
  include_dirs = [
    "//third_party/bounds_checking_function/include",
    "//drivers/peripheral/codec/interfaces/include",
    "//foundation/multimedia/utils/lite/hals",
  ]
  ldflags = [ "-lstdc++" ]
  ldflags += [ "-lcodec" ]
  ldflags += [ "-Wl,-rpath-link=$ohos_root_path/$root_out_dir" ]
  ldflags += [ "-lhdi_media" ]
  deps = [
    "$ohos_vendor_adapter_dir:hardware_media_sdk",
    "$ohos_vendor_adapter_dir/multimedia:libhdi_media",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
}
