# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")
import("//build/lite/ndk/ndk.gni")

if (ohos_kernel_type != "liteos_m") {
  shared_library("player_lite") {
    sources = [
      "binder/player.cpp",
      "binder/player_client.cpp",
    ]
    cflags = [ "-fPIC" ]
    cflags += [ "-Wall" ]
    cflags += [ "-Werror" ]
    cflags_cc = cflags
    include_dirs = [
      "//base/security/permission/interfaces/kits/permission_lite",
      "//foundation/multimedia/media_lite/frameworks/player_lite/binder",
    ]
    outdir = rebase_path("$root_out_dir")
    public_configs = [ ":player_external_library_config" ]
    ldflags = [ "-L$outdir" ]
    public_deps = [
      "//base/security/permission/services/permission_lite/pms_client:pms_client",
      "//foundation/distributedschedule/samgr_lite/samgr:samgr",
      "//foundation/graphic/surface:lite_surface",
      "//foundation/multimedia/utils/lite:media_common",
      "//third_party/bounds_checking_function:libsec_shared",
    ]
  }

  config("player_external_library_config") {
    include_dirs =
        [ "//foundation/multimedia/media_lite/interfaces/kits/player_lite" ]
    include_dirs += [ "//foundation/multimedia/utils/lite/interfaces/kits" ]
  }

  lite_component("media_lite") {
    features = [
      ":player_lite",
      "//foundation/multimedia/media_lite/interfaces/kits/player_lite/js/builtin:audio_lite_api",
    ]
  }
} else {
  static_library("player_lite") {
    sources = [ "passthrough/player.cpp" ]
    include_dirs =
        [ "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits/hilog" ]
    public_deps = [
      "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_static",
      "//foundation/multimedia/histreamer:histreamer",
    ]
    public_configs = [ ":player_direct_external_library_config" ]
  }

  config("player_direct_external_library_config") {
    include_dirs = [
      "//foundation/multimedia/media_lite/interfaces/innerkits",
      "//foundation/multimedia/frameworks/player_lite",
      "//foundation/multimedia/utils/lite/interfaces/kits",
      "//foundation/multimedia/media_lite/interfaces/kits/player_lite",
      "//drivers/peripheral/format/interfaces/include",
    ]
  }
}
