# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")
import("//build/lite/ndk/ndk.gni")

shared_library("recorder_lite") {
  sources = [
    "recorder.cpp",
    "recorder_impl.cpp",
    "recorder_sink/src/recorder_sink.cpp",
    "recorder_source/src/recorder_audio_source.cpp",
    "recorder_source/src/recorder_video_source.cpp",
  ]
  cflags = [ "-fPIC" ]
  cflags += [ "-Wall" ]
  cflags_cc = cflags
  include_dirs = [
    "recorder_sink/include",
    "recorder_source/include",
    "//third_party/bounds_checking_function/include",
    "//drivers/peripheral/audio/interfaces/include",
    "//drivers/peripheral/codec/interfaces/include",
    "//drivers/peripheral/format/interfaces/include",
    "//base/security/permission/interfaces/kits/permission_lite",
  ]
  public_configs = [ ":recorder_external_library_config" ]
  outdir = rebase_path("$root_out_dir")
  ldflags = [
    "-L$outdir",
    "-lformat_muxer",
    "-lformat_demuxer",
  ]
  deps = [
    "//base/security/permission/services/permission_lite/pms_client:pms_client",
    "//foundation/graphic/surface:lite_surface",
    "//foundation/multimedia/audio_lite/frameworks:audio_capturer_lite",
    "//foundation/multimedia/utils/lite:media_common",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
}
config("recorder_external_library_config") {
  include_dirs =
      [ "//foundation/multimedia/media_lite/interfaces/kits/recorder_lite" ]
  include_dirs += [ "//foundation/multimedia/utils/lite/include" ]
}

lite_component("media_lite") {
  features = [ ":recorder_lite" ]
}
