# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")
import("//build/lite/ndk/ndk.gni")

shared_library("recorder_lite") {
  sources = [
    "recorder.cpp",
    "recorder_client.cpp",
  ]
  cflags = [ "-fPIC" ]
  cflags += [ "-Wall" ]
  cflags += [ "-Werror" ]
  cflags_cc = cflags
  include_dirs = [
    "recorder_sink/include",
    "recorder_source/include",
    "//third_party/bounds_checking_function/include",
    "//foundation/multimedia/utils/lite/hals",
    "//drivers/peripheral/audio/interfaces/include",
    "//drivers/peripheral/codec/interfaces/include",
    "//drivers/peripheral/format/interfaces/include",
    "//base/security/permission/interfaces/kits/permission_lite",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/registry",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/samgr",
    "//foundation/multimedia/media_lite/services/recorder_lite",
  ]
  public_configs = [ ":recorder_external_library_config" ]
  deps = [
    "//base/security/permission/services/permission_lite/pms_client:pms_client",
    "//foundation/communication/ipc_lite:liteipc_adapter",
    "//foundation/multimedia/audio_lite/frameworks:audio_capturer_lite",
    "//foundation/multimedia/utils/lite:media_common",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
  public_deps = [ "//foundation/graphic/surface:lite_surface" ]
}
config("recorder_external_library_config") {
  include_dirs =
      [ "//foundation/multimedia/media_lite/interfaces/kits/recorder_lite" ]
  include_dirs += [ "//foundation/multimedia/utils/lite/interfaces/kits" ]
}
