# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

shared_library("player_client") {
  sources = [ "client/src/player_client.cpp" ]
  include_dirs = [
    "client/include",
    "//foundation/multimedia/media_lite/frameworks/player_lite",
    "//foundation/multimedia/utils/lite/interfaces/kits",
    "//foundation/multimedia/media_lite/interfaces/kits/player_lite",
  ]
  deps = [
    "//foundation/communication/ipc_lite:liteipc_adapter",
    "//foundation/distributedschedule/samgr_lite/samgr:samgr",
    "//foundation/graphic/surface:lite_surface",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
  ldflags = [ "-lstdc++" ]
  cflags = [
    "-fPIC",
    "-Wall",
    "-Wno-format",
  ]
  cflags_cc = cflags
}

shared_library("player_server") {
  sources = [
    "server/src/player_server.cpp",
    "server/src/player_factory.cpp",
    "server/src/samgr_player_server.cpp",
  ]
  include_dirs = [
    "server/include",
    "client/include",
    "//drivers/peripheral/audio/interfaces/include",
    "//drivers/peripheral/codec/interfaces/include",
    "//drivers/peripheral/format/interfaces/include",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/base",
    "//foundation/multimedia/histreamer/interface",
    "//foundation/multimedia/utils/lite/hals",
    "//foundation/multimedia/utils/lite/interfaces/kits",
    "//foundation/multimedia/media_lite/interfaces/innerkits",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/registry",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/samgr",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/communication/broadcast",
    "//base/startup/syspara_lite/interfaces/kits/"
  ]
  outdir = rebase_path("$root_out_dir")
  public_configs = [ ":player_server_external_library_config" ]
  cflags = [
    "-fPIC",
    "-Wall",
    "-Wno-format",
  ]
  cflags_cc = cflags
  ldflags = [
    "-L$outdir",
    "-lstdc++",
    "-Wl,-rpath-link=$ohos_root_path/$root_out_dir",
    "-lcodec",
  ]
  deps = [
    "//foundation/distributedschedule/samgr_lite/samgr:samgr",
    "//foundation/graphic/surface:lite_surface",
    "//foundation/multimedia/histreamer:histreamer",
  ]
  public_deps = [
    "//foundation/multimedia/media_lite/frameworks/player_lite:player_lite_impl",
    "//foundation/multimedia/utils/lite:media_common",
    "//base/startup/syspara_lite/frameworks/parameter/src:sysparam",
  ]
}

config("player_server_external_library_config") {
  include_dirs =
      [ "//foundation/multimedia/media_lite/services/player_lite/server/include" ]
  include_dirs +=
      [ "//foundation/multimedia/media_lite/frameworks/player_lite" ]
}
