# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")

static_library("recorder_server") {
  sources = [
    "recorder_audio_source.cpp",
    "recorder_impl.cpp",
    "recorder_samgr.cpp",
    "recorder_service.cpp",
    "recorder_sink.cpp",
    "recorder_video_source.cpp",
  ]
  cflags = [ "-Wall" ]
  cflags_cc = cflags
  public_configs = [ ":recorder_server_public_config" ]
  public_deps = [
    "//base/security/permission/services/permission_lite/pms_client:pms_client",
    "//foundation/communication/ipc_lite:liteipc_adapter",
    "//foundation/distributedschedule/samgr_lite/samgr:samgr",
    "//foundation/graphic/surface:lite_surface",
    "//foundation/multimedia/audio_lite/frameworks:audio_capturer_lite",
    "//foundation/multimedia/utils/lite:media_common",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
}

config("recorder_server_public_config") {
  include_dirs = [
    "//foundation/multimedia/media_lite/interfaces/kits/recorder_lite",
    "//third_party/bounds_checking_function/include",
    "//drivers/peripheral/audio/interfaces/include",
    "//drivers/peripheral/codec/interfaces/include",
    "//drivers/peripheral/format/interfaces/include",
    "//base/security/permission/interfaces/kits/permission_lite",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/registry",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/samgr",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/communication/broadcast",
    "//foundation/multimedia/media_lite/services/recorder_lite",
    "//foundation/multimedia/media_lite/interfaces/kits/recorder_lite",
  ]
  ldflags = [
    "-lformat_hw",
    "-lcodec",
  ]
}
